--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>VeroxTest</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Josefin+Sans:wght@400&family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
